RESOLVED FIXED28377
StyledElement should use ASCIICType instead of having its own toHex function
https://bugs.webkit.org/show_bug.cgi?id=28377
Summary StyledElement should use ASCIICType instead of having its own toHex function
Darin Adler
Reported 2009-08-16 22:07:35 PDT
There's code to parse image properties that uses its own local hex function, but it should use functions from ASCIICType.h instead.
Attachments
patch (2.66 KB, patch)
2009-08-16 22:09 PDT, Darin Adler
mitz: review+
Darin Adler
Comment 1 2009-08-16 22:09:27 PDT
Darin Adler
Comment 2 2009-08-16 22:26:35 PDT
Lucas Forschler
Comment 3 2019-02-06 09:03:58 PST
Mass moving XML DOM bugs to the "DOM" Component.
Note You need to log in before you can comment on or make changes to this bug.