StyledElement should use ASCIICType instead of having its own toHex function https://bugs.webkit.org/show_bug.cgi?id=28377

Patch by Darin Adler <darin@apple.com> on 2009-08-16
Reviewed by Dan Bernstein.

* dom/StyledElement.cpp:
(WebCore::StyledElement::addCSSColor): Use isASCIIHexDigit and toASCIIHexValue.



Canonical link: https://commits.webkit.org/38951@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47350 268f45cc-cd09-0410-ab3c-d52691b4dbfc